fixed out of bounds index

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -281,6 +281,17 @@ p {
     }
 }
 
+.github-logo {
+    @extend .padded-lg;
+    @extend .float-right;
+    width: 30px;
+    opacity: 0.5;
+
+    &:hover {
+        opacity: 1;
+    }
+}
+
 /**
  * @license
  * MyFonts Webfont Build ID 3354006, 2017-03-03T19:36:25-0500
